--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ draft: false
 
 ---
 <div class="section">
-  <section class="fixed v80" style='display: block; background-image: url("assets/images/kids.png");'>
+  <section class="fixed v80" style='display: block; background-image: url("assets/images/london-clojurians-banner-google-form.png");'>
     <div class="container container-wide container-header">
       <br><br>
       <div class="white-text z-depth-5 radius-border opacity-background title-shadow">
